--- a/index.html
+++ b/index.html
@@ -6,5 +6,22 @@
 </head>
 
 <body>
+	
+	<!--Header Section Begins-->
+	<header>
+		<!--Header Image Code goes here-->
+		<!--Nav Code Goes Here-->
+	</header>
+	<!--Header closes here-->
+	
+	<!--Main Content Section Begins here-->
+	<section class = "main-content">
+		<!--Content Image code goes here-->
+		<!--Content paragraph goes here-->
+		<!--Sign Up Button goes here-->
+		<!--Login Button Goes here-->
+	</section>
+	<!--Main Content Closes-->
+	
 </body>
 </html>
