added hello world

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
+<link href="css/index.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -10,6 +11,7 @@
 	<!--Header Section Begins-->
 	<header>
 		<!--Header Image Code goes here-->
+		hello world
 		<!--Nav Code Goes Here-->
 	</header>
 	<!--Header closes here-->
