--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Better Professor</title>
 </head>
 
 <body>
-	
+	<h1>Hello</h1>
 	<!--Header Section Begins-->
 	<header>
 		<!--Header Image Code goes here-->
