navigaion color set and image logo uploaded

--- a/index.html
+++ b/index.html
@@ -3,13 +3,31 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
+	
+	<link rel="stylesheet" href="css/index.css">
+<link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+	
 </head>
 
 <body>
 	
 	<!--Header Section Begins-->
-	<header>
+	<header class = "header">
 		<!--Header Image Code goes here-->
+		<img src = "img/BPA Logo.png" alt = "BPA Logo">
+		<div class = "header-txt">
+			<h2>Better Professor</h2>
+			<p>Deadline Management App</p>
+		</div>
+		<a href="#">Log In</a>
+		<navigation class = "navigation">
+			<ul>
+				<a href="#">Home</a>
+				<a href="#">How It Works</a>
+				<a href="#">Reviews</a>
+				<a href="#">Sign In</a>
+			</ul>
+		</navigation>
 		<!--Nav Code Goes Here-->
 	</header>
 	<!--Header closes here-->
