restructured the header section and images and font spacing and login color

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 	
 	<!--Header Section Begins-->
 	<header class = "header">
-		<!--Header Image Code goes here-->
-		<img src = "img/BPA Logo.png" alt = "BPA Logo">
-		<div class = "header-txt">
-			<h2>Better Professor</h2>
-			<p>Deadline Management App</p>
-		</div>
-		<a href="#">Log In</a>
+		<container class = "header-container">
+			<!--Header Image Code goes here-->
+			<img src = "img/BPA Logo.png" alt = "BPA Logo">
+			<div class = "header-txt">
+				<h2>Better Professor</h2>
+				<p>Deadline Management App</p>
+			</div>
+			<a href="#" class="login">Log In</a>
+		</container>
 		<navigation class = "navigation">
 			<ul>
 				<a href="#">Home</a>
