completed the header section and added variable for the dodger blue

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<a href="#">Home</a>
 				<a href="#">How It Works</a>
 				<a href="#">Reviews</a>
-				<a href="#">Sign In</a>
+				<a href="#" class = "signup">Sign Up</a>
 			</ul>
 		</navigation>
 		<!--Nav Code Goes Here-->
