partial section with text and image needs proper layout

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../css/index.css">
+
 <title>Better Professor</title>
 </head>
 
 <body>
-	<h1>Hello</h1>
 	<!--Header Section Begins-->
 	<header>
 		<!--Header Image Code goes here-->
@@ -16,10 +18,23 @@
 	
 	<!--Main Content Section Begins here-->
 	<section class = "main-content">
-		<!--Content Image code goes here-->
+		<div class=divContainer>
+			<!--Content Image code goes here-->
+		<div class="image">
+			<img src="../img/bpa-phone.jpg" alt="phone in hand">
+		</div>
 		<!--Content paragraph goes here-->
-		<!--Sign Up Button goes here-->
-		<!--Login Button Goes here-->
+		<div class="words">
+			<h1>Never miss another deadline again!</h1>
+			<p>Managing multiple projects with numerous deadlines for 
+			a myriad of students can be a hassle for even the most
+			organized teacher. Streamline the process now with Better Professor.</p>
+			<!--Sign Up Button goes here-->
+			<div class="btn">SIGN UP</div>
+			<!--Login Button Goes here-->
+		</div>
+		
+		</div>
 	</section>
 	<!--Main Content Closes-->
 	
