--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang = "en">
+<html>
 <head>
-
 <meta charset="utf-8">
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/index.css">
 
+<title>Better Professor</title>
 </head>
 <body>
 	
