updated the section code for better layout

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <meta charset="utf-8">
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/index.css">
-
-
+<link href="css/index.css" rel="stylesheet" type="text/css">
 <title>Better Professor</title>
 </head>
 <body>
@@ -34,11 +33,10 @@
 	
 	<!--Main Content Section Begins here-->
 	<section class = "main-content">
-		<div class=divContainer>
+		<div class= "divContainer">
 			<!--Content Image code goes here-->
-		<div class="image">
-			<img src="../img/bpa-phone.jpg" alt="phone in hand">
-		</div>
+		<img src="img/bpa-phone.jpg" alt="phone in hand" class="phone-img">
+		
 		<!--Content paragraph goes here-->
 		<div class="words">
 			<h1>Never miss another deadline again!</h1>
@@ -46,10 +44,10 @@
 			a myriad of students can be a hassle for even the most
 			organized teacher. Streamline the process now with Better Professor.</p>
 			<!--Sign Up Button goes here-->
-			<div class="btn">SIGN UP</div>
+			
 			<!--Login Button Goes here-->
 		</div>
-		
+		<div class="btn">SIGN UP</div>
 		</div>
 	</section>
 	<!--Main Content Closes-->
