section content changed to hi-fi layout and spacing fixed

--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 		<img src="img/bpa-phone.jpg" alt="phone in hand" class="phone-img">
 		
 		<!--Content paragraph goes here-->
+		<div class = "section-content">
 		<div class="words">
-			<h1>Never miss another deadline again!</h1>
-			<p>Managing multiple projects with numerous deadlines for 
+		  <h1 data_temp_dwid="0">Never miss another deadline again!</h1>
+		  <p>Managing multiple projects with numerous deadlines for 
 			a myriad of students can be a hassle for even the most
 			organized teacher. Streamline the process now with Better Professor.</p>
 			<!--Sign Up Button goes here-->
@@ -48,6 +49,7 @@
 			<!--Login Button Goes here-->
 		</div>
 		<div class="btn">SIGN UP</div>
+			</div>
 		</div>
 	</section>
 	<!--Main Content Closes-->
