completed the buttons and landing page for the desktop version

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 			
 			<!--Login Button Goes here-->
 		</div>
-		<div class="btn">SIGN UP</div>
+		<div class="sign-up-btn">SIGN UP</div>
+			<div class="log-in-btn">LOG IN</div>
 			</div>
 		</div>
 	</section>
