completed the mobile response

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header class = "header">
 		<container class = "header-container">
 			<!--Header Image Code goes here-->
-			<img src = "img/BPA Logo.png" alt = "BPA Logo">
+			<img src = "img/BPA Logo.png" alt = "BPA Logo" class= "logo">
 			<div class = "header-txt">
 				<h2>Better Professor</h2>
 				<p>Deadline Management App</p>
