--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../css/index.css">
-<link href="css/index.css" rel="stylesheet" type="text/css">
-<title>Better Professor</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content = "width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="../css/index.css">
+	<link href="css/index.css" rel="stylesheet" type="text/css">
+	<title>Better Professor</title>
 </head>
 <body>
 	<!--Header Section Begins-->
