corrected the home-page.less files and reinstated the button mixin and applied it to the landing page

--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
 	
 	<!--Main Content Section Begins here-->
 	<section class = "main-content">
-		<div class= "divContainer">
 			<!--Content Image code goes here-->
 		<img src="img/bpa-phone.jpg" alt="phone in hand" class="phone-img">
 		
 		<!--Content paragraph goes here-->
 		<div class = "section-content">
 		<div class="words">
-		  <h1 data_temp_dwid="0">Never miss another deadline again!</h1>
+		  <h1>Never miss another deadline again!</h1>
 		  <p>Managing multiple projects with numerous deadlines for 
 			a myriad of students can be a hassle for even the most
 			organized teacher. Streamline the process now with Better Professor.</p>
@@ -52,7 +51,7 @@
 		<div class="sign-up-btn">SIGN UP</div>
 			<div class="log-in-btn">LOG IN</div>
 			</div>
-		</div>
+		
 	</section>
 	<!--Main Content Closes-->
 	
