completely repaird the merge conflict and less files and mixins are back, How It Works page is stylistically complete

--- a/how_it_works.html
+++ b/how_it_works.html
@@ -32,14 +32,17 @@
 	<!--Header closes here-->
 	
 	<!--Main Content Section Begins here-->
-	<section class = "how-main"></section>
+	<section class = "how-main">
+	<img src = "img/chart.jpg" alt = "chart.jpg" class = "chart">
+	<div class = "how-content">
 	<h1>How It works</h1>
-	<img src = "img/chart.jpg" alt = "chart.jpg">
+	
 	<p>Better Professor allows you to better organize, manage, and remind not just your students, but yourself.<br><br>
 	Find the students that you are mentoring, and keep track of their progress on their assignments, projects, and research.<br><br>
  	Create unique due dates that will automatically remind you and your students, when something is coming up or due with automated or custom messages!<br><br>
 	Never miss an opportunity to mentor again! </p>
-	
+	</div>
+	</section>
 	
 </body>
 </html>
