--- a/how_it_works.html
+++ b/how_it_works.html
@@ -21,9 +21,10 @@
 		</container>
 		<navigation class = "navigation">
 			<ul>
-				<a href="#">Home</a>
-				<a href="#">How It Works</a>
-				<a href="#">Reviews</a>
+				<a href="index.html">Home</a>
+				<a href="how_it_works.html">How It Works</a>
+				<a href="reviews.html">Reviews</a>
+				<a href="meet_the_team.html">Meet the Team</a>
 				<a href="#" class = "signup">Sign Up</a>
 			</ul>
 		</navigation>
