--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h2>Better Professor</h2>
 				<p>Deadline Management App</p>
 			</div>
-			<a href="#" class="login">Log In</a>
+			<a href="https://betterprofessor.now.sh/" class="login">Log In</a>
 		</container>
 		<navigation class = "navigation">
 			<ul>
@@ -26,7 +26,7 @@
 				<a href="how_it_works.html">How It Works</a>
 				<a href="reviews.html">Reviews</a>
 				<a href="meet_the_team.html">Meet the Team</a>
-				<a href="#" class = "signup">Sign Up</a>
+				<a href="https://betterprofessor.now.sh/registration" class = "signup">Sign Up</a>
 			</ul>
 		</navigation>
 		<!--Nav Code Goes Here-->
@@ -49,9 +49,9 @@
 			
 			<!--Login Button Goes here-->
 		</div>
-		<div class="sign-up-btn">SIGN UP</div>
-			<div class="log-in-btn">LOG IN</div>
-			</div>
+		<button type="button" onclick="window.location.href = 'https://betterprofessor.now.sh/registration'" class="sign-up-btn">SIGN UP</button>
+		<button type ="button" onclick="window.location.href = 'https://betterprofessor.now.sh/'" class="log-in-btn">LOG IN</button>
+		</div>
 		
 	</section>
 	<!--Main Content Closes-->
