completed reviews page

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 				<h2>Better Professor</h2>
 				<p>Deadline Management App</p>
 			</div>
-			<a href="#" class="login">Log In</a>
+			<a href="https://betterprofessor.now.sh/" class="login">Log In</a>
 		</container>
 		<navigation class = "navigation">
 			<ul>
-				<a href="#">Home</a>
+				<a href="index.html">Home</a>
 				<a href="#">How It Works</a>
-				<a href="#">Reviews</a>
-				<a href="#" class = "signup">Sign Up</a>
+				<a href="reviews.html">Reviews</a>
+				<a href="https://betterprofessor.now.sh/registration" class = "signup">Sign Up</a>
 			</ul>
 		</navigation>
 		<!--Nav Code Goes Here-->
