--- a/reviews.html
+++ b/reviews.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="../css/index.css">
 	<link href="css/index.css" rel="stylesheet" type="text/css">
+	<script src="https://kit.fontawesome.com/fb8478e992.js" crossorigin="anonymous"></script>
 	<title>Reviews</title>
 </head>
 <body>
@@ -18,14 +19,14 @@
 				<h2>Better Professor</h2>
 				<p>Deadline Management App</p>
 			</div>
-			<a href="#" class="login">Log In</a>
+			<a href="https://betterprofessor.now.sh/" class="login">Log In</a>
 		</container>
 		<navigation class = "navigation">
 			<ul>
-				<a href="#">Home</a>
+				<a href="index.html">Home</a>
 				<a href="#">How It Works</a>
 				<a href="#">Reviews</a>
-				<a href="#" class = "signup">Sign Up</a>
+				<a href="https://betterprofessor.now.sh/registration" class = "signup">Sign Up</a>
 			</ul>
 		</navigation>
 		<!--Nav Code Goes Here-->
@@ -33,6 +34,82 @@
 	<!--Header closes here-->
 	
 	<!--Main Content Section Begins here-->
+	<section>
+		<div>
+		</div>
+		<div class="tableContainer">
+			<h1>Reviews</h1>
+			<div class="tableDiv">
+				<table>
+					<tr><!--table headers-->
+						<th>Reviewer</th>
+						<th>Review</th>
+						<th>Rating</th>
+					</tr>
+					<tr><!--1st row-->
+						<td>Joe Bob</td>
+						<td>App is so cool!</td>
+						<td>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>						
+						</td>
+					</tr>
+					<tr><!--2nd row-->
+						<td>Sally May</td>
+						<td>Wow! Just Wow!</td>
+						<td>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+						</td>
+					</tr>
+					
+					<tr><!--3rd row-->
+						<td>Dave</td>
+						<td>Not Impressed</td>
+						<td>
+							<i class="fas fa-star-half"></i>
+						</td>
+				  	</tr>
+				  	<tr><!--4th row-->
+						<td>Tom</td>
+						<td>It's ok.</td>
+						<td>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+						</td>
+					  </tr>
+					  <tr><!--5th row-->
+						<td>Roberto</td>
+						<td>Es una muy buena applicacion.Si.</td>
+						<td>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+						</td>
+					  </tr>
+					  <tr><!--6th row-->
+						<td>Dr. Wang</td>
+						<td>Has eased my stress levels immensely.</td>
+						<td>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star"></i>
+							<i class="fas fa-star-half"></i>
+						</td>
+			  		</tr>
+
+				</table>
+			</div>
+		</div>
+	</section>
 	
 	
 </body>
