--- a/reviews.html
+++ b/reviews.html
@@ -24,8 +24,9 @@
 		<navigation class = "navigation">
 			<ul>
 				<a href="index.html">Home</a>
-				<a href="#">How It Works</a>
-				<a href="#">Reviews</a>
+				<a href="how_it_works.html">How It Works</a>
+				<a href="reviews.html">Reviews</a>
+				<a href="meet_the_team.html">Meet the Team</a>
 				<a href="https://betterprofessor.now.sh/registration" class = "signup">Sign Up</a>
 			</ul>
 		</navigation>
