--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -18,22 +18,24 @@
 				<h2>Better Professor</h2>
 				<p>Deadline Management App</p>
 			</div>
-			<a href="#" class="login">Log In</a>
+			<a href="https://betterprofessor.now.sh/" class="login">Log In</a>
 		</container>
+		<!--Nav Code Goes Here-->
 		<navigation class = "navigation">
 			<ul>
-				<a href="#">Home</a>
-				<a href="#">How It Works</a>
-				<a href="#">Reviews</a>
-				<a href="#" class = "signup">Sign Up</a>
+				<a href="index.html">Home</a>
+				<a href="how_it_works.html">How It Works</a>
+				<a href="reviews.html">Reviews</a>
+				<a href="meet_the_team.html">Meet the Team</a>
+				<a href="https://betterprofessor.now.sh/registration" class = "signup">Sign Up</a>
 			</ul>
 		</navigation>
-		<!--Nav Code Goes Here-->
+		
 	</header>
 	<!--Header closes here-->
 	
 	<!--Main Content Section Begins here-->
-	
+	<h1>testing</h1>
 	
 </body>
 </html>
