added drop down button to the homepage and the how it works page

--- a/how_it_works.html
+++ b/how_it_works.html
@@ -11,6 +11,16 @@
 	<!--Header Section Begins-->
 	<header class = "header">
 		<container class = "header-container">
+			<!--Dropdown button goes here-->
+			<div class="dropdown">
+			  <button class="dropbtn">Menu</button>
+			  <div class="dropdown-content">
+				<a href="index.html">Home</a>
+				<a href="how_it_works.html">How It Works</a>
+				<a href="reviews.html">Reviews</a>
+				<a href="meet_the_team.html">Meet the Team</a>
+			  </div>
+			</div>
 			<!--Header Image Code goes here-->
 			<img src = "img/BPA Logo.png" alt = "BPA Logo" class= "logo">
 			<div class = "header-txt">
