figured out the active animation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</container>
 		<navigation class = "navigation">
 			<ul>
-				<a href="index.html">Home</a>
+				<a href="index.html" class = "current">Home</a>
 				<a href="how_it_works.html">How It Works</a>
 				<a href="reviews.html">Reviews</a>
 				<a href="meet_the_team.html">Meet the Team</a>
