--- a/how_it_works.html
+++ b/how_it_works.html
@@ -32,7 +32,7 @@
 		<navigation class = "navigation">
 			<ul>
 				<a href="index.html">Home</a>
-				<a href="how_it_works.html">How It Works</a>
+				<a href="how_it_works.html" class = "current">How It Works</a>
 				<a href="reviews.html">Reviews</a>
 				<a href="meet_the_team.html">Meet the Team</a>
 				<a href="https://betterprofessor.now.sh/registration" class = "signup">Sign Up</a>
