current state of team page

--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -27,7 +27,7 @@
 				<a href="how_it_works.html">How It Works</a>
 				<a href="reviews.html">Reviews</a>
 				<a href="meet_the_team.html">Meet the Team</a>
-				<a href="https://betterprofessor.now.sh/registration" class = "signup">Sign Up</a>
+				<a href="https://betterprofessor.now.sh/#/registration" class = "signup">Sign Up</a>
 			</ul>
 		</navigation>
 		
@@ -35,7 +35,219 @@
 	<!--Header closes here-->
 	
 	<!--Main Content Section Begins here-->
-	<h1>testing</h1>
+	<div class='cardsContainer'>
+		<div class="card"><!--card 1-->
+			<div class="header">
+				<h3>Ciara CC Beitel</h3>
+			</div>
+			<div class="row">
+				<div class="column">
+					<div class="photo">
+						<img src="https://ca.slack-edge.com/T4JUEB3ME-ULK658C9Z-15fd31b64d73-72" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
+					</div>
+				</div>
+				<div class="column">
+					<div class="content">
+						<h4>Project Manager</h4>
+						<p>
+							iOS Dev + Graphic Designer Combo with a side of School Crossing Guard
+						</p>
+					</div>
+				</div>	
+			</div>
+		</div><!--end of card 1-->
+	
+		<div class="card"><!--card 2-->
+			<div class="header">
+				<h3>Devin Graham</h3>
+			</div>
+			<div class="row">
+				<div class="column">
+					<div class="photo">
+						<img src="https://avatars1.githubusercontent.com/u/35251347?s=460&v=4" alt="github profile pic" width=300px height=300px style="border-radius:50%">
+					</div>
+				</div>
+				<div class="column">
+					<div class="content">
+						<h4>Front End</h4>
+						<p>Devin was the React I developer behind the registration page.
+							 He's currently a student at Lambda School, trying to earn the 
+							 big bucks doing what he loves: Coding! He lives in Northern Mississippi 
+							 with two dogs he loathes and his wife, who he does not loathe.</p>
+					</div>
+				</div>	
+			</div>
+		</div><!--end of card 2-->
+		<div class="card"><!--card 3-->
+			<div class="header">
+				<h3>Naomi Rodriguez</h3>
+			</div>
+			<div class="row">
+				<div class="column">
+					<div class="photo">
+						<img src="https://avatars3.githubusercontent.com/u/36058007?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
+					</div>
+				</div>
+				<div class="column">
+					<div class="content">
+						<h4>Front End</h4>
+						<p>
+							Web developer Student at lambda school
+						</p>
+					</div>
+				</div>	
+			</div>
+		</div><!--end of card 3-->
+	
+		<div class="card"><!--card 4-->
+			<div class="header">
+				<h3>David Alvarez</h3>
+			</div>
+			<div class="row">
+				<div class="column">
+					<div class="photo">
+						<img src="https://avatars3.githubusercontent.com/u/10346209?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
+					</div>
+				</div>
+				<div class="column">
+					<div class="content">
+						<h4>UI</h4>
+						<p>
+							Current Lambda Fullstack student 
+						</p>
+					</div>
+				</div>	
+			</div>
+		</div><!--end of card 4-->
+	
+		<div class="card"><!--card 5-->
+			<div class="header">
+				<h3>Phong Yang</h3>
+			</div>
+			<div class="row">
+				<div class="column">
+					<div class="photo">
+						<img src="https://avatars0.githubusercontent.com/u/56094050?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
+					</div>
+				</div>
+				<div class="column">
+					<div class="content">
+						<h4>Front End</h4>
+						<p>
+							iOS Dev + Graphic Designer Combo with a side of School Crossing Guard
+						</p>
+					</div>
+				</div>	
+			</div>
+		</div><!--end of card 5-->
+	
+		<div class="card"><!--card 6-->
+			<div class="header">
+				<h3>Emily Bruner</h3>
+			</div>
+			<div class="row">
+				<div class="column">
+					<div class="photo">
+						<img src="https://avatars0.githubusercontent.com/u/56037660?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
+					</div>
+				</div>
+				<div class="column">
+					<div class="content">
+						<h4>Back End</h4>
+						<p>
+							iOS Dev + Graphic Designer Combo with a side of School Crossing Guard
+						</p>
+					</div>
+				</div>	
+			</div>
+		</div><!--end of card 6-->
+
+		<div class="card"><!--card 7-->
+			<div class="header">
+				<h3>Matthew Bergeron</h3>
+			</div>
+			<div class="row">
+				<div class="column">
+					<div class="photo">
+						<img src="https://avatars1.githubusercontent.com/u/46853842?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
+					</div>
+				</div>
+				<div class="column">
+					<div class="content">
+						<h4>UI</h4>
+						<p>
+							Strength and Conditioning Coach turned programmer and Web Developer
+						</p>
+					</div>
+				</div>	
+			</div>
+		</div><!--end of card 7-->
+
+		<div class="card"><!--card 8-->
+			<div class="header">
+				<h3>Yannick Wessidjam</h3>
+			</div>
+			<div class="row">
+				<div class="column">
+					<div class="photo">
+						<img src="https://avatars3.githubusercontent.com/u/54903025?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
+					</div>
+				</div>
+				<div class="column">
+					<div class="content">
+						<h4>Front End</h4>
+						<p>Web developer</p>
+					</div>
+				</div>	
+			</div>
+		</div><!--end of card 8-->
+
+		<div class="card"><!--card 9-->
+			<div class="header">
+				<h3>Tracey Cooper</h3>
+			</div>
+			<div class="row">
+				<div class="column">
+					<div class="photo">
+						<img src="..\img\TRC B&W.JPG" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
+					</div>
+				</div>
+				<div class="column">
+					<div class="content">
+						<h4>UX</h4>
+						<p>Tracey Renée Cooper, UX Designer
+							Tracey is an easy going person who is passionate about making the world a better place.
+							 Her background in entertainment marketing and customer service has afforded her a wealth
+ 							 of experience in problem solving, analytics and meeting client/customer demands.
+						</p>
+					</div>
+				</div>	
+			</div>
+		</div><!--end of card 9-->
+
+		<div class="card"><!--card 9-->
+			<div class="header">
+				<h3>Elijah Foster</h3>
+			</div>
+			<div class="row">
+				<div class="column">
+					<div class="photo">
+						<img src="..\img\darthVader.jpg" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
+					</div>
+				</div>
+				<div class="column">
+					<div class="content">
+						<h4>Back End</h4>
+						<p>Evil Genius</p>
+					</div>
+				</div>	
+			</div>
+		
+
+
+	</div>
+
+	
 	
 </body>
 </html>
