--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -99,7 +99,7 @@
 				<div class="content">
 					<h3>Emily Bruner</h3>
 					<img src="https://avatars0.githubusercontent.com/u/56037660?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
-					<h4>Project Manager</h4>
+					<h4>Back End</h4>
 					<p>Fullstack Lambda student</p>
 				</div>	
 		</div><!--end of card 6-->
@@ -108,7 +108,7 @@
 				<div class="content">
 					<h3>Matthew Bergeron</h3>
 					<img src="https://avatars1.githubusercontent.com/u/46853842?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
-					<h4>Project Manager</h4>
+					<h4>UI</h4>
 					<p>
 						Strength and Conditioning Coach turned programmer and Web Developer
 					</p>
