added sign up link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ cd<!doctype html>
 				<a href="how_it_works.html">How It Works</a>
 				<a href="reviews.html">Reviews</a>
 				<a href="meet_the_team.html">Meet the Team</a>
-				<a href="https://betterprofessor.now.sh/registration" class = "signup">Sign Up</a>
+				<a href="https://betterprofessor.now.sh/#/registration" class = "signup">Sign Up</a>
 			</ul>
 		</navigation>
 		<!--Nav Code Goes Here-->
@@ -59,7 +59,7 @@ cd<!doctype html>
 			
 			<!--Login Button Goes here-->
 		</div>
-		<button type="button" onclick="window.location.href = 'https://betterprofessor.now.sh/registration'" class="sign-up-btn">SIGN UP</button>
+		<button type="button" onclick="window.location.href = 'https://betterprofessor.now.sh/#/registration'" class="sign-up-btn">SIGN UP</button>
 		<button type ="button" onclick="window.location.href = 'https://betterprofessor.now.sh/'" class="log-in-btn">LOG IN</button>
 		</div>
 		
