fix tracey image

--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -127,7 +127,7 @@
 		<div class="card"><!--card 9-->
 				<div class="content">
 					<h3>Tracey Cooper</h3>
-					<img src="img/tracy.JPG" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
+					<img src="img/tracy.jpg" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
 					<h4>UX</h4>
 					<p>Tracey Renée Cooper, UX Designer
 						Tracey is an easy going person who is passionate about making the world a better place.
