aesthetic changes part 1

--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
 			  </div>
 			</div>
 			<!--Header Image Code goes here-->
-			<img src = "img/BPA Logo.png" alt = "BPA Logo" class= "logo">
-			<div class = "header-txt">
-				<h2>Better Professor</h2>
-				<p>Deadline Management App</p>
+			<div class = "logo-container" >
+				<img src = "img/BPA Logo.png" alt = "BPA Logo" class= "logo">
+				<div class = "header-txt">
+					<h2>Better Professor</h2>
+					<p>Deadline Management App</p>
+				</div>
 			</div>
-			<a href="https://betterprofessor.now.sh/" class="login">Log In</a>
+			<div class = "header-login">
+				<a href="https://betterprofessor.now.sh/" class="login">Log In</a>
+			</div>
 		</container>
 		<navigation class = "navigation">
 			<ul>
