--- a/how_it_works.html
+++ b/how_it_works.html
@@ -50,7 +50,7 @@
 	<section class = "how-main">
 		<img src = "img/chart.jpg" alt = "chart.jpg" class = "chart">
 		<div class = "how-content">
-			<h1>How It works</h1>
+			<h1>How It Works</h1>
 	
 			<p>Better Professor allows you to better organize, manage, and remind not just your students, but yourself.<br><br>
 			Find the students that you are mentoring, and keep track of their progress on their assignments, projects, and research.<br><br>
