--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<a href="how_it_works.html">How It Works</a>
 				<a href="reviews.html">Reviews</a>
 				<a href="meet_the_team.html">Meet the Team</a>
-				<a href="https://betterprofessor.now.sh/#/registration" class = "signup">Sign Up</a>
+				<a href="https://betterprofessor.now.sh/registration" class = "signup">Sign Up</a>
 			</ul>
 		</navigation>
 		<!--Nav Code Goes Here-->
