--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -73,7 +73,7 @@
 					<h3>Naomi Rodriguez</h3>
 					<img src="https://avatars3.githubusercontent.com/u/36058007?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
 					<h4>Front End</h4>
-					<p>Web developer Student at lambda school</p>
+					<p>Web developer Student at Lambda school</p>
 				</div>	
 		</div><!--end of card 3-->
 	
@@ -145,9 +145,8 @@
 					<p>Evil Genius</p>
 				</div>	
 		</div><!--end of card 10-->
+				
 		
-
-
 	</div>
 
 	
