--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -140,7 +140,7 @@
 		<div class="card"><!--card 10-->
 				<div class="content">
 					<h3>Elijah Foster</h3>
-					<img src="img/darthVader.jpg" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
+					<img src="img/elijah.jpg" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
 					<h4>Back End</h4>
 					<p>Evil Genius</p>
 				</div>	
