added header changes to all pages

--- a/reviews.html
+++ b/reviews.html
@@ -11,38 +11,42 @@
 </head>
 <body>
 <!--Header Section Begins-->
-<header class = "header">
-	<container class = "header-container">
-		<!--Dropdown button goes here-->
-		<div class="dropdown">
-		  <button class="dropbtn">Menu</button>
-		  <div class="dropdown-content">
-			<a href="index.html">Home</a>
-			<a href="how_it_works.html">How It Works</a>
-			<a href="reviews.html">Reviews</a>
-			<a href="meet_the_team.html">Meet the Team</a>
-		  </div>
-		</div>
-		<!--Header Image Code goes here-->
-		<img src = "img/BPA Logo.png" alt = "BPA Logo" class= "logo">
-		<div class = "header-txt">
-			<h2>Better Professor</h2>
-			<p>Deadline Management App</p>
-		</div>
-		<a href="https://betterprofessor.now.sh/" class="login">Log In</a>
-	</container>
-	<navigation class = "navigation">
-		<ul>
-			<a href="index.html">Home</a>
-			<a href="how_it_works.html">How It Works</a>
-			<a href="reviews.html" class = "current">Reviews</a>
-			<a href="meet_the_team.html">Meet the Team</a>
-			<a href="https://betterprofessor.now.sh/#/registration" class = "signup">Sign Up</a>
-		</ul>
-	</navigation>
-	<!--Nav Code Goes Here-->
-</header>
-<!--Header closes here-->
+	<header class = "header">
+		<container class = "header-container">
+			<!--Dropdown button goes here-->
+			<div class="dropdown">
+			  <button class="dropbtn">Menu</button>
+			  <div class="dropdown-content">
+				<a href="index.html">Home</a>
+				<a href="how_it_works.html">How It Works</a>
+				<a href="reviews.html">Reviews</a>
+				<a href="meet_the_team.html">Meet the Team</a>
+			  </div>
+			</div>
+			<!--Header Image Code goes here-->
+			<div class = "logo-container" >
+				<img src = "img/BPA Logo.png" alt = "BPA Logo" class= "logo">
+				<div class = "header-txt">
+					<h2>Better Professor</h2>
+					<p>Deadline Management App</p>
+				</div>
+			</div>
+			<div class = "header-login">
+				<a href="https://betterprofessor.now.sh/" class="login">Log In</a>
+			</div>
+		</container>
+		<navigation class = "navigation">
+			<ul>
+				<a href="index.html">Home</a>
+				<a href="how_it_works.html">How It Works</a>
+				<a href="reviews.html" class = "current">Reviews</a>
+				<a href="meet_the_team.html" >Meet the Team</a>
+				<a href="https://betterprofessor.now.sh/#/registration" class = "signup">Sign Up</a>
+			</ul>
+		</navigation>
+		<!--Nav Code Goes Here-->
+	</header>
+	<!--Header closes here-->
 	
 	<!--Main Content Section Begins here-->
 	<section>
