--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -68,10 +68,10 @@
 				<div class="content">
 					<h3>Devin Graham</h3>
 					<img src="https://avatars1.githubusercontent.com/u/35251347?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
-					<h4>Front End</h4>
+					<a href="https://github.com/Devin44G"><h4>Front End</h4></a>
 					<ul>
 						<li>-React I developer student at Lambda School. </li>
-						<li>Developed the registration page.</li>
+						<li>-Developed the registration page.</li>
 						<li>-South Haven, Mississippi</li>
 					</ul>
 				</div>	
@@ -81,7 +81,7 @@
 				<div class="content">
 					<h3>Naomi Rodriguez</h3>
 					<img src="https://avatars3.githubusercontent.com/u/36058007?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
-					<h4>Front End</h4>
+					<a href="https://github.com/naomi121"><h4>Front End</h4></a>
 					<ul>
 						<li>-Web developer student at Lambda School. </li>
 						<li>-Orlando, Florida</li>
@@ -93,10 +93,10 @@
 			<div class="content">
 				<h3>David Alvarez</h3>
 				<img src="https://avatars3.githubusercontent.com/u/10346209?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
-				<h4>UI</h4>
+				<a href="https://github.com/David-E-Alvarez"><h4>UI</h4></a>
 				<ul>
 					<li>-Fullstack developer student at Lambda School. </li>
-					<li>Built the marketing site.</li>
+					<li>-Built the marketing site.</li>
 					<li>-Salinas, CA</li>
 				</ul>
 			</div>
@@ -106,7 +106,7 @@
 				<div class="content">
 					<h3>Phong Yang</h3>
 					<img src="https://avatars0.githubusercontent.com/u/56094050?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
-					<h4>Front End</h4>
+					<a href="https://github.com/PHONGdotTech"><h4>Front End</h4></a>
 					<ul>
 						<li>-React II developer student at Lambda School. </li>
 						<li>-Kansas City, Kansas </li>
@@ -118,7 +118,7 @@
 				<div class="content">
 					<h3>Emily Bruner</h3>
 					<img src="https://avatars0.githubusercontent.com/u/56037660?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
-					<h4>Back End</h4>
+					<a href="https://github.com/emilybruner"><h4>Back End</h4></a>
 					<ul>
 						<li>-Fullstack developer student at Lambda School</li>
 						<li>-Built out the endpoints for the models and networking.</li>
@@ -131,7 +131,7 @@
 				<div class="content">
 					<h3>Matthew Bergeron</h3>
 					<img src="https://avatars1.githubusercontent.com/u/46853842?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
-					<h4>UI</h4>
+					<a href="https://github.com/bergeronmatt"><h4>UI</h4></a>
 					<ul>
 						<li>-Web developer student at Lambda School</li>
 						<li>-Built the marketing site.</li>
@@ -144,7 +144,7 @@
 				<div class="content">
 					<h3>Yannick Wessidjam</h3>
 					<img src="https://avatars3.githubusercontent.com/u/54903025?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
-					<h4>Back End</h4>
+					<a href="https://github.com/YaniWessi"><h4>Back End</h4></a>
 					<ul>
 						<li>-Built out the endpoints for the models and networking.</li>
 						<li>-Brooklyn, New York</li>
