updated team section

--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -63,7 +63,18 @@
 					</ul>
 				</div>	
 		</div><!--end of card 1-->
-	
+			<div class="card"><!--card 7-->
+				<div class="content">
+					<h3>Matthew Bergeron</h3>
+					<img src="img/profile pic 2.jpg" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
+					<a href="https://github.com/bergeronmatt"><h4>UI/UX</h4></a>
+					<ul>
+						<li>-Web developer student at Lambda School</li>
+						<li>-Created design files for web and mobile site/application; built marketing site.</li>
+						<li>-Columbus, Ohio</li>
+					</ul>>
+				</div>	
+		</div><!--end of card 7-->
 		<div class="card"><!--card 2-->
 				<div class="content">
 					<h3>Devin Graham</h3>
@@ -127,18 +138,7 @@
 				</div>	
 		</div><!--end of card 6-->
 
-		<div class="card"><!--card 7-->
-				<div class="content">
-					<h3>Matthew Bergeron</h3>
-					<img src="https://avatars1.githubusercontent.com/u/46853842?s=460&v=4" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
-					<a href="https://github.com/bergeronmatt"><h4>UI</h4></a>
-					<ul>
-						<li>-Web developer student at Lambda School</li>
-						<li>-Built the marketing site.</li>
-						<li>-Columbus, Ohio</li>
-					</ul>>
-				</div>	
-		</div><!--end of card 7-->
+
 
 		<div class="card"><!--card 8-->
 				<div class="content">
@@ -151,19 +151,6 @@
 					</ul>
 				</div>	
 		</div><!--end of card 8-->
-
-		<div class="card"><!--card 9-->
-				<div class="content">
-					<h3>Tracey Cooper</h3>
-					<img src="img/tracy.jpg" alt="slack profile pic of CC our teams PM" width=300px height=300px style="border-radius:50%">
-					<h4>UX</h4>
-					<ul>
-						<li>-UX design student at Lambda School</li>
-						<li>-Created the design files for web and mobile sites/applications.</li>
-						<li>-Brooklyn, New York</li>
-					</ul>
-				</div>	
-		</div><!--end of card 9-->
 
 		<div class="card"><!--card 10-->
 				<div class="content">
